--- a/YACHT/main.css
+++ b/YACHT/main.css
@@ -55,3 +55,19 @@ th {
 .ones {
     
 }
+html,body {
+        width: 100%;
+        height: 100%;
+      }
+      .container {
+        width: 100%;
+        height: 100%;
+        background: pink;
+      }
+
+
+.title {
+    font-size: 54px;
+    margin: 3px;
+    color: darkgreen;
+}
