--- a/YACHT/main.css
+++ b/YACHT/main.css
@@ -1,4 +1,9 @@
-
+@font-face {
+    font-family: 'GangwonState';
+    src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2307-2@1.0/GangwonState.woff2') format('woff2');
+    font-weight: normal;
+    font-style: normal;
+}
 .scones {
     
     padding: 0;
@@ -31,6 +36,10 @@ td {
     background-color: deepskyblue;
     border-radius: 3px;
     color: whitesmoke;
+    width: 90px;
+    height: 50px;
+    font-size: 16px;
+    font-weight: 600;
 }
 
 .total {
@@ -60,9 +69,11 @@ html,body {
         height: 100%;
       }
       .container {
-        width: 100%;
-        height: 100%;
-        background: pink;
+        position: absolute;
+        left:50%;
+        top: 50%;
+        transform: translate(-50%,-50%);
+        
       }
 
 
@@ -70,4 +81,23 @@ html,body {
     font-size: 54px;
     margin: 3px;
     color: darkgreen;
+    font-weight: 600;
+    position: absolute;
+    left:50%;
+    top: 5%;
+    transform: translate(-50%,-50%);
+}
+
+.keep {
+    margin: 0px;
+    margin-top: 5px;
+    font-family: 'GangwonState';
+    font-size: 19px;
+}
+
+.lastkeep {
+    margin: 0px;
+    margin-top: 5px;
+    font-family: 'GangwonState';
+    font-size: 19px;
 }
